--- a/src/app/project/p-login/p-login.component.html
+++ b/src/app/project/p-login/p-login.component.html
@@ -1,6 +1,31 @@
-<div class="box">
+<!-- <div class="box">
     <h1>Login</h1>
     <input type="text" placeholder="Enter User Name" #userName> <br>
     <input type="password" placeholder="Enter Password" #password> <br>
     <button (click)="onLogin(userName,password)" routerLinkActive="router-link-active" >Login</button>
+</div> -->
+
+<div class="box">
+    <div *ngIf="loginPage">
+        <h1>Login</h1>
+        <form [formGroup]="myLoginForm">
+            <input type="email" placeholder="Enter Email" formControlName="email"> <br>
+            <input type="password" placeholder="Enter Password" formControlName="password"> <br>
+            <button (click)="onLogin()" routerLinkActive="router-link-active" >Login</button><br>
+            <a (click)="accounts()">Register For new Account</a>
+        </form>
+    </div>
+
+    <div *ngIf="!loginPage">
+        <h1>Registration</h1>
+        <form [formGroup]="myRegistrationForm">
+            <input type="text" placeholder="Enter First Name" formControlName="firstName"> <br>
+            <input type="text" placeholder="Enter Last Name" formControlName="lastName"> <br>
+            <input type="email" placeholder="Enter Email" formControlName="email"> <br>
+            <input type="password" placeholder="Enter Password" formControlName="password"> <br>
+            <input type="password" placeholder="Enter Confirm password" formControlName="confirmPassword"> <br>
+            <button (click)="onRegistration()" routerLinkActive="router-link-active" >Register</button><br>
+            <a (click)="accounts()">Already Have Account</a>
+        </form>
+    </div>
 </div>
